--- a/index.html
+++ b/index.html
@@ -5,45 +5,138 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sport-project</title>
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Montserrat|Raleway&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./sport-project.css">
 </head>
 
 <body>
     <header>
-        <nav id="nav">
-            <ul class="menu">
-                <li><a href="/">Main</a></li>
-                <li class="matches"><a href="">Matches</a>
-                    <ul id="matches-list">
-                        <li><a href="">one</a></li>
-                        <li><a href="">two</a></li>
-                        <li><a href="">three</a></li>
-                    </ul>
-                </li>
-                <li><a href="/news">News</a></li>
-                <li><a href="/fans">Fans</a></li>
-                <li><a href="/contacts">Contacts</a></li>
-                <li><a href="/admin">Admin</a></li>
-            </ul>
-            <div>
-                <img src="/" alt="logoimage">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active uunderscore">
+                        <a class="nav-link" href="#">Main</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Matches
+                        </a>
+                        <ul class="dropdown-menu relative" aria-labelledby="navbarDropdown">
+                            <li class="relative justify-center"><a class="dropdown-item uunderscore" href="#">Action</a>
+                            </li>
+                            <li class="relative"><a class="dropdown-item uunderscore" href="#">Action</a></li>
+                            <li class="relative"><a class="dropdown-item uunderscore" href="#">Action</a></li>
+
+                        </ul>
+                    </li>
+                    <li class="nav-item uunderscore">
+                        <a class="nav-link" href="#">News</a>
+                    </li>
+                    <li class="nav-item uunderscore">
+                        <a class="nav-link" href="#">Fans</a>
+                    </li>
+                    <li class="nav-item uunderscore">
+                        <a class="nav-link" href="#">Contacts</a>
+                    </li>
+                    <li class="nav-item uunderscore">
+                        <a class="nav-link" href="#">Admin</a>
+                    </li>
+                </ul>
             </div>
+            <a class="navbar-brand" href="#">Svitolina</a>
         </nav>
     </header>
-    <main>
+    <main class="container">
         <div id="main-image">
-            
+            <p> Аліна Світоліна <br>українська тенісистка<br> третя ракетка світу в рейтингу WTA <br> у 2017, 2018 і
+                2019 роках
+            </p>
         </div>
+        <section>
+            <div class="card d-flex flex-row margin-top-1" style="width: 100%;">
+                <img class="card-img-left col-sm-4"
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Svitolina_RG19_%2816%29_%2848199019751%29.jpg/500px-Svitolina_RG19_%2816%29_%2848199019751%29.jpg"
+                    alt="Card image cap">
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title">Біографія</h5>
+                    <p class="card-text ">українська тенісистка, третя ракетка світу в рейтингу WTA у 2017, 2018 і
+                        2019 роках. Чемпіонка
+                        підсумкового турніру WTA Finals 2018 року. Виграла 13 турнірів WTA в одиночному розряді та
+                        два —
+                        в парному. Двічі діставалася півфіналів на турнірах Великого шолома (2019) і чотири рази —
+                        чвертьфіналів (2015, 2017, 2018, 2019). Чвертьфіналістка Олімпійських ігор 2016 року.<br>З
+                        Олімпійських ігор 2016 року Еліна Світоліна вигравала всі матчі, в яких зустрічалася з
+                        поточними
+                        першими ракетками світу на момент гри, шість разів поспіль, обігравши Серену Вільямс,
+                        Анджелік
+                        Кербер (тричі) і Симону Халеп (двічі).
+                        Станом на вересень 2019 року 30 разів вигравала у тенісисток, що перебували у топ-10
+                        рейтингу
+                        WTA на момент гри, а також загалом 37 разів перемагала 10 тенісисток, що колись займали
+                        позицію
+                        першої ракетки світу. Обігрувала таких чемпіонок як Анджелік Кербер (8 разів), Ешлі Барті (5
+                        разів), Гарбінє Мугуруса (5 разів), Симона Халеп (4 рази), Каролін Возняцкі (4 рази), Вінус
+                        Вільямс (тричі), Кароліна Плішкова (тричі), Наомі Осака (тричі), Петра Квітова (двічі),
+                        Слоун
+                        Стівенс (двічі), Серена Вільямс, Ана Іванович тощо.
+                        Найуспішніша спортсменка в історії українського тенісу, встановила багато національних
+                        рекордів,
+                        і серед жінок і серед чоловіків, зокрема зайняла найвищу серед українських тенісистів третю
+                        позицію в світовому рейтингу, єдина перемагала в підсумковому чемпіонаті року, єдина серед
+                        жінок
+                        досягала півфіналів турнірів Великого шолому в одиночному розряді тощо.</p>
+                </div>
+            </div>
+            <div class="card d-flex flex-row" style="width: 100%;">
+                <div class="card-body flex-column align-center">
+                    <h5 class="card-title">Остання перемога</h5>
+                    <p class="card-text">Тенісистки провели на корті 1 годину і 21 хвилину. Долю першого сету
+                        вирішив один брейк в кінцівці партії.
+                        У другому сеті Світоліна не змогла подати на перемогу з рахунком 5-4, після чого взяла ще
+                        один гейм
+                        на подачі суперниці, яким і завершила гру на свою користь.
+                        <br> В активі українки 3 ейси при 3 подвійних помилки, 17 Віннер і 20 невимушених помилок, 4
+                        реалізованих
+                        брейкпоінта з 6. Британка оформила 2 ейси при 2 подвійних, 27 Віннер при 33 невимушених
+                        помилках,
+                        реалізувала 2 брейкпоінта з 3.Еліна Світоліна в 7 разів поспіль за 8 сезонів подолала
+                        стартовий бар'єр змагань.
+                        Для 315-й ракетки світу Кеті Бултер, яка через травму не грала в Туре з квітня по листопад в
+                        минулому
+                        сезоні, це був перший матч в основі Великих Шоломів за рік. </p>
+
+                </div>
+                <img class="card-img-right col-sm-6"
+                    src="https://sport.img.com.ua/nxs107/b/1100x999999/7/03/55456aff7d07c8e9dca22e8384bf6037.jpg"
+                    alt="Card image cap">
+            </div>
+        </section>
     </main>
     <footer>
         <div class="social-buttons">
-
             <a href="http://www.facebook.com"><img src="./img/facebook.png" alt="facebook"> </a>
             <a href="http://www.twitter.com"><img src="./img/twitter.png" alt="twitter"> </a>
             <a href="http://www.instagram.com"><img src="./img/instagram.png" alt="instagram"> </a>
             <a href="http://www.telegram.com"><img src="./img/telegram.png" alt="telegram"> </a>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
