--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+            <input class="checkbor" type="checkbox">
+                <span class="navbar-toggler"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active uunderscore">
-                        <a class="nav-link" href="#">Main</a>
+                <ul class="menu">
+                    <li class=" uunderscore">
+                        <a href="#">Main</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="matches">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Matches
