--- a/index.html
+++ b/index.html
@@ -15,24 +15,29 @@
 <body>
     <header>
         <nav id="nav">
-            <ul class="menu">
-                <li><a href="/">Main</a></li>
+            <input type="checkbox" id="checkbox">
+            <label for="checkbox">
 
-                <li class="matches"><a href="">Matches</a>
-                    <ul id="matches-list">
-                        <li><a href="">one</a></li>
-                        <li><a href="">two</a></li>
-                        <li><a href="">three</a></li>
-                    </ul>
-                </li>
-                <li><a href="/news">News</a></li>
-                <li><a href="/fans">Fans</a></li>
-                <li><a href="/contacts">Contacts</a></li>
-                <li><a href="/admin">Admin</a></li>
-                <li><a href="/">Svitolina</a></li>
+                <a class="toggler"><span></span></a>
+                <ul class="menu">
+                    <li><a href="/">Main</a></li>
 
-            </ul>
+                    <li class="matches"><a href="">Matches</a>
+                        <ul id="matches-list">
+                            <li><a href="">one</a></li>
+                            <li><a href="">two</a></li>
+                            <li><a href="">three</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="/news">News</a></li>
+                    <li><a href="/fans">Fans</a></li>
+                    <li><a href="/contacts">Contacts</a></li>
+                    <li><a href="/admin">Admin</a></li>
+                    <li><a href="/">Svitolina</a></li>
 
+                </ul>
+
+            </label>
         </nav>
     </header>
     <main>
@@ -47,57 +52,58 @@
                     <img class=""
                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Svitolina_RG19_%2816%29_%2848199019751%29.jpg/500px-Svitolina_RG19_%2816%29_%2848199019751%29.jpg"
                         alt="Card image cap">
-                    <h5>Біографія</h5>
-                    <p>українська тенісистка, третя ракетка світу в рейтингу WTA у 2017, 2018 і
-                        2019 роках. Чемпіонка
-                        підсумкового турніру WTA Finals 2018 року. Виграла 13 турнірів WTA в одиночному розряді та
-                        два —
-                        в парному. Двічі діставалася півфіналів на турнірах Великого шолома (2019) і чотири рази —
-                        чвертьфіналів (2015, 2017, 2018, 2019). Чвертьфіналістка Олімпійських ігор 2016 року.<br>З
-                        Олімпійських ігор 2016 року Еліна Світоліна вигравала всі матчі, в яких зустрічалася з
-                        поточними
-                        першими ракетками світу на момент гри, шість разів поспіль, обігравши Серену Вільямс,
-                        Анджелік
-                        Кербер (тричі) і Симону Халеп (двічі).
-                        Станом на вересень 2019 року 30 разів вигравала у тенісисток, що перебували у топ-10
-                        рейтингу
-                        WTA на момент гри, а також загалом 37 разів перемагала 10 тенісисток, що колись займали
-                        позицію
-                        першої ракетки світу. Обігрувала таких чемпіонок як Анджелік Кербер (8 разів), Ешлі Барті (5
-                        разів), Гарбінє Мугуруса (5 разів), Симона Халеп (4 рази), Каролін Возняцкі (4 рази), Вінус
-                        Вільямс (тричі), Кароліна Плішкова (тричі), Наомі Осака (тричі), Петра Квітова (двічі),
-                        Слоун
-                        Стівенс (двічі), Серена Вільямс, Ана Іванович тощо.
-                        Найуспішніша спортсменка в історії українського тенісу, встановила багато національних
-                        рекордів,
-                        і серед жінок і серед чоловіків, зокрема зайняла найвищу серед українських тенісистів третю
-                        позицію в світовому рейтингу, єдина перемагала в підсумковому чемпіонаті року, єдина серед
-                        жінок
-                        досягала півфіналів турнірів Великого шолому в одиночному розряді тощо.</p>
-                </div>
-            </div>
-            <div class="card d-flex flex-row" style="width: 100%;">
-                <div class="card-body flex-column align-center">
-                    <h5 class="card-title">Остання перемога</h5>
-                    <p class="card-text">Тенісистки провели на корті 1 годину і 21 хвилину. Долю першого сету
-                        вирішив один брейк в кінцівці партії.
-                        У другому сеті Світоліна не змогла подати на перемогу з рахунком 5-4, після чого взяла ще
-                        один гейм
-                        на подачі суперниці, яким і завершила гру на свою користь.
-                        <br> В активі українки 3 ейси при 3 подвійних помилки, 17 Віннер і 20 невимушених помилок, 4
-                        реалізованих
-                        брейкпоінта з 6. Британка оформила 2 ейси при 2 подвійних, 27 Віннер при 33 невимушених
-                        помилках,
-                        реалізувала 2 брейкпоінта з 3.Еліна Світоліна в 7 разів поспіль за 8 сезонів подолала
-                        стартовий бар'єр змагань.
-                        Для 315-й ракетки світу Кеті Бултер, яка через травму не грала в Туре з квітня по листопад в
-                        минулому
-                        сезоні, це був перший матч в основі Великих Шоломів за рік. </p>
+                        <div>
 
-                </div>
-                <img class="card-img-right col-sm-6"
-                    src="https://sport.img.com.ua/nxs107/b/1100x999999/7/03/55456aff7d07c8e9dca22e8384bf6037.jpg"
-                    alt="Card image cap">
+                            <h5>Біографія</h5>
+                            <p>українська тенісистка, третя ракетка світу в рейтингу WTA у 2017, 2018 і
+                                2019 роках. Чемпіонка
+                                підсумкового турніру WTA Finals 2018 року. Виграла 13 турнірів WTA в одиночному розряді та
+                                два —
+                                в парному. Двічі діставалася півфіналів на турнірах Великого шолома (2019) і чотири рази —
+                                чвертьфіналів (2015, 2017, 2018, 2019). Чвертьфіналістка Олімпійських ігор 2016 року.<br>З
+                                Олімпійських ігор 2016 року Еліна Світоліна вигравала всі матчі, в яких зустрічалася з
+                                поточними
+                                першими ракетками світу на момент гри, шість разів поспіль, обігравши Серену Вільямс,
+                                Анджелік
+                                Кербер (тричі) і Симону Халеп (двічі).
+                                Станом на вересень 2019 року 30 разів вигравала у тенісисток, що перебували у топ-10
+                                рейтингу
+                                WTA на момент гри, а також загалом 37 разів перемагала 10 тенісисток, що колись займали
+                                позицію
+                                першої ракетки світу. Обігрувала таких чемпіонок як Анджелік Кербер (8 разів), Ешлі Барті (5
+                                разів), Гарбінє Мугуруса (5 разів), Симона Халеп (4 рази), Каролін Возняцкі (4 рази), Вінус
+                                Вільямс (тричі), Кароліна Плішкова (тричі), Наомі Осака (тричі), Петра Квітова (двічі),
+                                Слоун
+                                Стівенс (двічі), Серена Вільямс, Ана Іванович тощо.
+                                Найуспішніша спортсменка в історії українського тенісу, встановила багато національних
+                                рекордів,
+                                і серед жінок і серед чоловіків, зокрема зайняла найвищу серед українських тенісистів третю
+                                позицію в світовому рейтингу, єдина перемагала в підсумковому чемпіонаті року, єдина серед
+                                жінок
+                                досягала півфіналів турнірів Великого шолому в одиночному розряді тощо.</p>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="bio-content">
+                            <h5>Остання перемога</h5>
+                            <p>Тенісистки провели на корті 1 годину і 21 хвилину. Долю першого сету
+                                вирішив один брейк в кінцівці партії.
+                                У другому сеті Світоліна не змогла подати на перемогу з рахунком 5-4, після чого взяла ще
+                                один гейм
+                                на подачі суперниці, яким і завершила гру на свою користь.
+                                <br> В активі українки 3 ейси при 3 подвійних помилки, 17 Віннер і 20 невимушених помилок, 4
+                    реалізованих
+                    брейкпоінта з 6. Британка оформила 2 ейси при 2 подвійних, 27 Віннер при 33 невимушених
+                    помилках,
+                    реалізувала 2 брейкпоінта з 3.Еліна Світоліна в 7 разів поспіль за 8 сезонів подолала
+                    стартовий бар'єр змагань.
+                    Для 315-й ракетки світу Кеті Бултер, яка через травму не грала в Туре з квітня по листопад в
+                    минулому
+                    сезоні, це був перший матч в основі Великих Шоломів за рік. </p>
+            </div>
+            <img class="card-img-right col-sm-6"
+                src="https://sport.img.com.ua/nxs107/b/1100x999999/7/03/55456aff7d07c8e9dca22e8384bf6037.jpg"
+                alt="Card image cap">
             </div>
         </section>
     </main>
