--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="./sport-project.css">
+    <link rel="stylesheet" href="./sport-project2.css">
 </head>
 
 <body>
@@ -52,46 +52,46 @@
                     <img class=""
                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Svitolina_RG19_%2816%29_%2848199019751%29.jpg/500px-Svitolina_RG19_%2816%29_%2848199019751%29.jpg"
                         alt="Card image cap">
-                        <div>
+                    <div>
 
-                            <h5>Біографія</h5>
-                            <p>українська тенісистка, третя ракетка світу в рейтингу WTA у 2017, 2018 і
-                                2019 роках. Чемпіонка
-                                підсумкового турніру WTA Finals 2018 року. Виграла 13 турнірів WTA в одиночному розряді та
-                                два —
-                                в парному. Двічі діставалася півфіналів на турнірах Великого шолома (2019) і чотири рази —
-                                чвертьфіналів (2015, 2017, 2018, 2019). Чвертьфіналістка Олімпійських ігор 2016 року.<br>З
-                                Олімпійських ігор 2016 року Еліна Світоліна вигравала всі матчі, в яких зустрічалася з
-                                поточними
-                                першими ракетками світу на момент гри, шість разів поспіль, обігравши Серену Вільямс,
-                                Анджелік
-                                Кербер (тричі) і Симону Халеп (двічі).
-                                Станом на вересень 2019 року 30 разів вигравала у тенісисток, що перебували у топ-10
-                                рейтингу
-                                WTA на момент гри, а також загалом 37 разів перемагала 10 тенісисток, що колись займали
-                                позицію
-                                першої ракетки світу. Обігрувала таких чемпіонок як Анджелік Кербер (8 разів), Ешлі Барті (5
-                                разів), Гарбінє Мугуруса (5 разів), Симона Халеп (4 рази), Каролін Возняцкі (4 рази), Вінус
-                                Вільямс (тричі), Кароліна Плішкова (тричі), Наомі Осака (тричі), Петра Квітова (двічі),
-                                Слоун
-                                Стівенс (двічі), Серена Вільямс, Ана Іванович тощо.
-                                Найуспішніша спортсменка в історії українського тенісу, встановила багато національних
-                                рекордів,
-                                і серед жінок і серед чоловіків, зокрема зайняла найвищу серед українських тенісистів третю
-                                позицію в світовому рейтингу, єдина перемагала в підсумковому чемпіонаті року, єдина серед
-                                жінок
-                                досягала півфіналів турнірів Великого шолому в одиночному розряді тощо.</p>
-                            </div>
-                        </div>
-                        </div>
-                        <div class="bio-content">
-                            <h5>Остання перемога</h5>
-                            <p>Тенісистки провели на корті 1 годину і 21 хвилину. Долю першого сету
-                                вирішив один брейк в кінцівці партії.
-                                У другому сеті Світоліна не змогла подати на перемогу з рахунком 5-4, після чого взяла ще
-                                один гейм
-                                на подачі суперниці, яким і завершила гру на свою користь.
-                                <br> В активі українки 3 ейси при 3 подвійних помилки, 17 Віннер і 20 невимушених помилок, 4
+                        <h5>Біографія</h5>
+                        <p>українська тенісистка, третя ракетка світу в рейтингу WTA у 2017, 2018 і
+                            2019 роках. Чемпіонка
+                            підсумкового турніру WTA Finals 2018 року. Виграла 13 турнірів WTA в одиночному розряді та
+                            два —
+                            в парному. Двічі діставалася півфіналів на турнірах Великого шолома (2019) і чотири рази —
+                            чвертьфіналів (2015, 2017, 2018, 2019). Чвертьфіналістка Олімпійських ігор 2016 року.<br>З
+                            Олімпійських ігор 2016 року Еліна Світоліна вигравала всі матчі, в яких зустрічалася з
+                            поточними
+                            першими ракетками світу на момент гри, шість разів поспіль, обігравши Серену Вільямс,
+                            Анджелік
+                            Кербер (тричі) і Симону Халеп (двічі).
+                            Станом на вересень 2019 року 30 разів вигравала у тенісисток, що перебували у топ-10
+                            рейтингу
+                            WTA на момент гри, а також загалом 37 разів перемагала 10 тенісисток, що колись займали
+                            позицію
+                            першої ракетки світу. Обігрувала таких чемпіонок як Анджелік Кербер (8 разів), Ешлі Барті (5
+                            разів), Гарбінє Мугуруса (5 разів), Симона Халеп (4 рази), Каролін Возняцкі (4 рази), Вінус
+                            Вільямс (тричі), Кароліна Плішкова (тричі), Наомі Осака (тричі), Петра Квітова (двічі),
+                            Слоун
+                            Стівенс (двічі), Серена Вільямс, Ана Іванович тощо.
+                            Найуспішніша спортсменка в історії українського тенісу, встановила багато національних
+                            рекордів,
+                            і серед жінок і серед чоловіків, зокрема зайняла найвищу серед українських тенісистів третю
+                            позицію в світовому рейтингу, єдина перемагала в підсумковому чемпіонаті року, єдина серед
+                            жінок
+                            досягала півфіналів турнірів Великого шолому в одиночному розряді тощо.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="bio-content">
+                <h5>Остання перемога</h5>
+                <p>Тенісистки провели на корті 1 годину і 21 хвилину. Долю першого сету
+                    вирішив один брейк в кінцівці партії.
+                    У другому сеті Світоліна не змогла подати на перемогу з рахунком 5-4, після чого взяла ще
+                    один гейм
+                    на подачі суперниці, яким і завершила гру на свою користь.
+                    <br> В активі українки 3 ейси при 3 подвійних помилки, 17 Віннер і 20 невимушених помилок, 4
                     реалізованих
                     брейкпоінта з 6. Британка оформила 2 ейси при 2 подвійних, 27 Віннер при 33 невимушених
                     помилках,
