--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>sport-project</title>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Montserrat|Raleway&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./sport-project2.css">
 </head>
 
@@ -48,13 +46,13 @@
         </div>
         <section>
             <div id="bio-container">
+                <h3>Біографія</h3>
                 <div class="bio-content">
                     <img class=""
                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Svitolina_RG19_%2816%29_%2848199019751%29.jpg/500px-Svitolina_RG19_%2816%29_%2848199019751%29.jpg"
                         alt="Card image cap">
                     <div>
 
-                        <h5>Біографія</h5>
                         <p>українська тенісистка, третя ракетка світу в рейтингу WTA у 2017, 2018 і
                             2019 роках. Чемпіонка
                             підсумкового турніру WTA Finals 2018 року. Виграла 13 турнірів WTA в одиночному розряді та
@@ -83,47 +81,35 @@
                             досягала півфіналів турнірів Великого шолому в одиночному розряді тощо.</p>
                     </div>
                 </div>
-            </div>
-            <div class="bio-content">
-                <h5>Остання перемога</h5>
-                <p>Тенісистки провели на корті 1 годину і 21 хвилину. Долю першого сету
-                    вирішив один брейк в кінцівці партії.
-                    У другому сеті Світоліна не змогла подати на перемогу з рахунком 5-4, після чого взяла ще
-                    один гейм
-                    на подачі суперниці, яким і завершила гру на свою користь.
-                    <br> В активі українки 3 ейси при 3 подвійних помилки, 17 Віннер і 20 невимушених помилок, 4
-                    реалізованих
-                    брейкпоінта з 6. Британка оформила 2 ейси при 2 подвійних, 27 Віннер при 33 невимушених
-                    помилках,
-                    реалізувала 2 брейкпоінта з 3.Еліна Світоліна в 7 разів поспіль за 8 сезонів подолала
-                    стартовий бар'єр змагань.
-                    Для 315-й ракетки світу Кеті Бултер, яка через травму не грала в Туре з квітня по листопад в
-                    минулому
-                    сезоні, це був перший матч в основі Великих Шоломів за рік. </p>
-            </div>
-            <img class="card-img-right col-sm-6"
-                src="https://sport.img.com.ua/nxs107/b/1100x999999/7/03/55456aff7d07c8e9dca22e8384bf6037.jpg"
-                alt="Card image cap">
+                <h3>Остання перемога</h3>
+                <div class="bio-content">
+                    <p>Тенісистки провели на корті 1 годину і 21 хвилину. Долю першого сету
+                        вирішив один брейк в кінцівці партії.
+                        У другому сеті Світоліна не змогла подати на перемогу з рахунком 5-4, після чого взяла ще
+                        один гейм
+                        на подачі суперниці, яким і завершила гру на свою користь.
+                        <br> В активі українки 3 ейси при 3 подвійних помилки, 17 Віннер і 20 невимушених помилок, 4
+                        реалізованих
+                        брейкпоінта з 6. Британка оформила 2 ейси при 2 подвійних, 27 Віннер при 33 невимушених
+                        помилках,
+                        реалізувала 2 брейкпоінта з 3.Еліна Світоліна в 7 разів поспіль за 8 сезонів подолала
+                        стартовий бар'єр змагань.
+                        Для 315-й ракетки світу Кеті Бултер, яка через травму не грала в Туре з квітня по листопад в
+                        минулому
+                        сезоні, це був перший матч в основі Великих Шоломів за рік. </p>
+                    <img src="https://sport.img.com.ua/nxs107/b/1100x999999/7/03/55456aff7d07c8e9dca22e8384bf6037.jpg"
+                        alt="Card image cap">
+                </div>
             </div>
         </section>
     </main>
     <footer>
-        <div class="social-buttons">
-            <a href="http://www.facebook.com"><img src="./img/facebook.png" alt="facebook"> </a>
-            <a href="http://www.twitter.com"><img src="./img/twitter.png" alt="twitter"> </a>
-            <a href="http://www.instagram.com"><img src="./img/instagram.png" alt="instagram"> </a>
-            <a href="http://www.telegram.com"><img src="./img/telegram.png" alt="telegram"> </a>
+        <a href="http://www.facebook.com"><img src="./img/facebook.png" alt="facebook"> </a>
+        <a href="http://www.twitter.com"><img src="./img/twitter.png" alt="twitter"> </a>
+        <a href="http://www.instagram.com"><img src="./img/instagram.png" alt="instagram"> </a>
+        <a href="http://www.telegram.com"><img src="./img/telegram.png" alt="telegram"> </a>
         </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
