--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sport-project</title>
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Montserrat|Raleway&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./sport-project2.css">
 </head>
 
